[package]
name = "pingussy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.11.5"
serde = "1.0.164"
tokio = { version = "1.5.0", features = ["full"] }
hocon = "0.9.0"
lazy_static = "1.4.0"
